Correct securities position spacing (#1513)

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -1722,7 +1722,7 @@ td.dataTables_empty {
       color: $print-color;
     }
   }
-  .securities-position-report-table td:nth-last-child(3) {
+  .securities-position-report-table th:nth-last-child(3) {
     padding-right: 2px;
   }
   .letters-of-credit-table {
